feat: FE tag filtering; UI tweaks
